# audio-plugin-coder

./: CLAUDE.md
docs/superpowers/specs/: 2026-03-30-snipbridge-feedback-panel-design.md
plugins/MultiBlend/: CMakeLists.txt  HANDOFF-chaosverb-aesthetic.md  status.json
plugins/MultiBlend/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/MultiBlend/Documentation/: USER_MANUAL.md
plugins/MultiBlend/Source/: BandProcessor.h  CrossoverProcessor.h  MSProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginEditorWindow.h  PluginHostManager.h  PluginProcessor.cpp  PluginProcessor.h  PluginSlot.h
plugins/MultiBlend/Source/Scanner/: scanner_main.cpp
plugins/MultiBlend/Source/ui/public/: design-tokens.css  entropia-buttons.css  entropia-header.css  index.html  knob-renderer.js  knob.css
plugins/SNIPBridge/: CMakeLists.txt  status.json
plugins/SNIPBridge/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/SNIPBridge/Design/: snip-bridge-ui.html  v1-style-guide.md  v1-test.html  v1-ui-spec.md  v2-style-guide.md  v2-test.html  v2-ui-spec.md
plugins/SNIPBridge/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/SNIPBridge/Source/ui/public/: index.html
plugins/SNIPBridge/Source/ui/public/js/: index.js
scripts/: fix-gatekeeper.sh
